src/styles/pages/app-container.scss
@import '../components/footer.scss';


.cellphone-wrap {
  max-width: 340px;
  min-height: 578px;
  height: 80vh;
  margin: 10vh auto 10vh auto;

  border:10px solid rgba(0,0,0,0.9);
  border-bottom-width: 70px;
  border-radius:10px;
  box-shadow:0 0 50px rgba(0,0,0,0.60);
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.76), 0 2px 6px rgba(0, 0, 0, 0.77), 0 10px 20px rgba(0, 0, 0, 0.49); 
}

/* Wrapper */
.app-wrap {
  display:flex;
  flex-direction:column;

  animation-name: slideFromBottom;
  animation-fill-mode: forwards;

  animation-delay: 1s;
  animation-duration: 1s;
  animation-play-state: running;
  animation-fill-mode: both;
  animation-iteration-count: 1;
}

/*
  Overall Layout
*/
.app-wrap > * {
  flex:1 1 auto;
  
}



/*
  Content
*/

.content {
  overflow-x: hidden;
  /* Trick: https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/ */
  overflow-y:  overlay;
  -webkit-overflow-scrolling: touch;

  height: 100%;
  padding: 0px 0px;
  background: #fff;
  //background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);

  will-change: transform, opacity;
}

